--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -73,12 +73,12 @@
           <!-- Page Section-->
           <section class="bg-light py-10">
             {% block section %}{% endblock %}
-            <div class="svg-border-rounded text-dark">
-              <!-- Rounded SVG Border-->
-              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 144.54 17.34" preserveaspectratio="none" fill="currentColor">
-                <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
-              </svg>
-            </div>
+              <div class="svg-border-angled text-dark">
+                <!-- Angled SVG Border-->
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100" preserveaspectratio="none" fill="currentColor">
+                  <polygon points="0,100 100,0 100,100"></polygon>
+                </svg>
+              </div>
           </section>
         {% endblock %}
         </main>
@@ -139,6 +139,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script src="/../mon-blog/public/js/passwordShow.js"></script>
       <script src="/../mon-blog/public/js/blogJs.js"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     {% endblock %}
   </body>
 </html>
